[metadata]
name = Codal
version = 0.9.0

[options]

packages =
  find:

# packages =
#   utils
#   utils.cmake
#   utils.cmake.buildtools
#   utils.cmake.toolchains
#   utils.python

py_modules =
  build

[options.entry_points]

console_scripts =
  codal = build:main

[options.packages.find]

include = utils*
